--- a/fluent/src/app/globals.css
+++ b/fluent/src/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Playwrite";
+  font-style: normal;
+  font-weight: 100 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playwriteis/v3/JTUQjI4o_SGg9lecLGptrD1hyyTh89Y.woff2)
+    format("woff2");
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
