--- a/fluent/src/app/globals.css
+++ b/fluent/src/app/globals.css
@@ -111,7 +111,7 @@ body {
 }
 
 .custom-editor mark {
-  background-color: #f0fdf4; /* Tailwind's bg-green-50 */
+  background-color: #d0f8dc; /* Tailwind's bg-green-50 */
   color: #1f2937;            /* Tailwind's text-gray-800 */
   padding: 0 2px;
   border-radius: 2px;
